[package]
name = "minesweeper_roguelike_frfr"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "24.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0"
glam = "0.25"
rand = "0.9.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

